--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2> Are You Ready for the Challenge?</h2>
     <h4> Let's Start the Quiz?</h4>
 
-    <button type="button" class="btn btn-secondary btn-sm" id="demo" href="startquiz.html" >Start Quiz</button>
+    <button type="button" class="btn btn-secondary btn-sm" id="start" href="startquiz.html" >Start Quiz</button>
     
 
 </body>
