--- a/startquiz.html
+++ b/startquiz.html
@@ -9,7 +9,15 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <h2>What did you eat this morning?</h2>
+    <h6>View High Score</h6>
+    <p> Timer:</p>
+    <p id="true"></p>
+    <p id="false"></p>
+    <p id="titles">Commonly used data types DO NOT include:</p>
+    <button type="button" class="btn btn-dark" id = "q1">strings</button>
+    <button type="button" class="btn btn-dark" id = "q2">boolean</button>
+    <button type="button" class="btn btn-dark" id = "q3">alerts</button>
+    <button type="button" class="btn btn-dark" id = "q4">numbers</button>
     
 </body>
 <script src="question.js"></script>
