Updating js and html start game and questions

--- a/startquiz.html
+++ b/startquiz.html
@@ -11,14 +11,11 @@
 <body>
     <h6>View High Score</h6>
     <p> Timer:</p>
-    <p id="true"></p>
-    <p id="false"></p>
-    <p id="titles">Commonly used data types DO NOT include:</p>
     <button type="button" class="btn btn-dark" id = "q1">strings</button>
     <button type="button" class="btn btn-dark" id = "q2">boolean</button>
     <button type="button" class="btn btn-dark" id = "q3">alerts</button>
     <button type="button" class="btn btn-dark" id = "q4">numbers</button>
-    
+    <div id="quizwork" ></div>
 </body>
 <script src="question.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
