--- a/startquiz.html
+++ b/startquiz.html
@@ -9,8 +9,8 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <h6>View High Score</h6>
-    <p> Timer:</p>
+    <h6>View High Score <span id = "highscore" ></span></h6>
+    <p> Timer: <span id = "time"></span></p>
     <button type="button" class="btn btn-dark" id = "q1">strings</button>
     <button type="button" class="btn btn-dark" id = "q2">boolean</button>
     <button type="button" class="btn btn-dark" id = "q3">alerts</button>
