--- a/startquiz.html
+++ b/startquiz.html
@@ -11,12 +11,12 @@
 <body>
     <h6>View High Score <span id = "highscore" ></span></h6>
     <p> Timer: <span id = "time"></span></p>
-    <div id = "quest"></div><br>
+    <div id = "quest">L</div><br>
     <button type="button" class="btn btn-dark" id = "q1">strings</button><br>
     <button type="button" class="btn btn-dark" id = "q2">boolean</button><br>
     <button type="button" class="btn btn-dark" id = "q3">alerts</button><br>
     <button type="button" class="btn btn-dark" id = "q4">numbers</button><br>
-    <div id = "ans"></div>
+    <div id = "ans">A</div>
     <div id="quizwork" ></div>
 </body>
 <script src="question.js"></script>
