Updating because i messed up everything

--- a/endGame.html
+++ b/endGame.html
@@ -12,10 +12,16 @@
 
 </head>
 <body>
-    <h2> Are You Ready for the Challenge?</h2>
-    <h4> Let's Start the Quiz?</h4>
-    
-    <button type="button" class="btn btn-secondary btn-sm" id="start" id="center" href="startquiz.html" >Start Quiz</button>
+    <h2> Game Over</h2>
+    <h4> Enter your name</h4>
+    <form>
+            <div class="row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="name">
+              </div>
+            </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     
 
 </body>
