--- a/startquiz.html
+++ b/startquiz.html
@@ -14,9 +14,9 @@
 
     <div id = "quest"></div><br>
 
-    <button type="button" class="btn btn-dark" id = "q1"></button><br>
-    <button type="button" class="btn btn-dark" id = "q2"></button><br>
-    <button type="button" class="btn btn-dark" id = "q3"></button><br>
+    <button type="button" class="btn btn-dark" id = "q1">strings</button><br>
+    <button type="button" class="btn btn-dark" id = "q2">butter</button><br>
+    <button type="button" class="btn btn-dark" id = "q3">alerts</button><br>
     <button type="button" class="btn btn-dark" id = "q4">numbers</button><br>
     <div id = "ans">A</div>
     
