--- a/startquiz.html
+++ b/startquiz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,15 +15,15 @@
     <div id = "quest"></div><br>
 
     <button type="button" class="btn btn-dark" id = "q1">strings</button><br>
-    <button type="button" class="btn btn-dark" id = "q2">butter</button><br>
+    <button type="button" class="btn btn-dark" id = "q2">boolean</button><br>
     <button type="button" class="btn btn-dark" id = "q3">alerts</button><br>
     <button type="button" class="btn btn-dark" id = "q4">numbers</button><br>
     <div id = "ans">A</div>
     
 </body>
-<script src="questions.js"></script>
+<script src="question.js"></script>
 <script src="q.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</div>
+</html>
